# bar-autohost

./: .gitignore  Cargo.toml  README.md  config.toml  startscript.txt
src/: autohost.rs  config.rs  environment.rs  http_client.rs  lib.rs  lobby.rs  main.rs  server.rs  spring.rs
src/autohost/: lobby.rs  mod.rs  spring.rs
src/server_coms/: mod.rs  responses.rs  server.rs  server_error.rs
src/utils/: environment.rs  http_client.rs  http_request.rs  mod.rs  websocket_client.rs
