[package]
name = "bar-autohost"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
figment = { version = "0.10.8", features = ["toml"] }
serde = { version = "1.0.154", features = ["derive"] }
