[package]
name = "bar-autohost"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
figment = { version = "0.10.8", features = ["toml", "env"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
async-trait = "0.1.67"
